# statanaut-model-testing

./: README.md  pyproject.toml
data/: 2002_matches.csv  2003_matches.csv  2004_matches.csv  2005_matches.csv  2006_matches.csv  2007_matches.csv  2008_matches.csv  2009_matches.csv  2010_matches.csv  2011_matches.csv  2012_matches.csv  2013_matches.csv  2014_matches.csv  2015_matches.csv  2016_matches.csv  2017_matches.csv  2018_matches.csv  2019_matches.csv  2020_matches.csv  2022_matches.csv  2023_matches.csv  2024_matches.csv  modern_teams.csv  teams.csv
data/matches/: 2002_matches.csv  2003_matches.csv  2004_matches.csv  2005_matches.csv  2006_matches.csv  2007_matches.csv  2008_matches.csv  2009_matches.csv  2010_matches.csv  2011_matches.csv  2012_matches.csv  2013_matches.csv  2014_matches.csv
src/statanaut_model_testing/: component_open_skill_by_ordinal.py  component_open_skill_by_ordinal_test.py  component_openskill.py  component_openskill_test.py  model_test.py  openskill.py  openskill_modern_test.py  openskill_test.py  sliding_openskill.py  trueskill_test.py
src/statanaut_model_testing/bayesian_tests/: bayesian_test.py
src/statanaut_model_testing/model/: model.py  rating.py
src/statanaut_model_testing/openskill_tests/: component_openskill.py  win_openskill.py
