[project]
name = "statanaut-model-testing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Siddharth Rao", email = "siddrao.926@gmail.com"},
]
dependencies = ["trueskill>=0.4.5", "pandas>=2.2.3", "openskill>=6.0.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
